--- a/frontend/assets/stylesheets/pages/_tickets.scss
+++ b/frontend/assets/stylesheets/pages/_tickets.scss
@@ -43,6 +43,10 @@
             border-color: $c-brandLightBlue;
         }
     }
+    .submit-input {
+        float: right;
+        margin-right: 0;
+    }
 }
 
 .tickets__payment {
