--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -211,6 +211,7 @@ $mem-brandGrey: #dcddda;
 $mem-trans-white: rgba(255, 255, 255, .8);
 $mem-black: #333333;
 $mem-blue: rgba(2, 199, 225, 1);
+$mem-buttonBlue: #197CAA;
 
 $mem-button-confirm: #1a4683;
 $mem-button-cancel: #b8b8b8;
