refactor button classes

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -7,6 +7,13 @@
     cursor: pointer;
     border: 0;
     text-decoration: none;
+    position: relative;
+    @include fs-textsans(4);
+    @include rem((
+        padding: 8px 18px,
+    ));
+    @include border-radius(50%);
+
     &:visited,
     &:hover,
     &:focus,
@@ -49,8 +56,6 @@
         width: 220px
     ));
     
-    @include fs-textsans(4);
-    @include border-radius(50%);
     &:visited,
     &:active,
     &:focus {
