Add a new class for non-supported browsers

--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -67,6 +67,9 @@
 
         if (isModern) {
             document.documentElement.className = document.documentElement.className.replace(/\bjs-not-modern\b/g, '');
+        } else {
+            // we add this class so it's off by default (avoiding FOUC)
+            document.documentElement.className += ' js-ancient-browser';
         }
 
     })(guardian.isModernBrowser);
