Add new component warning users to upgrade browser

--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -21,6 +21,7 @@
    ========================================================================== */
 @import 'utility/hidden';
 @import 'utility/js-warning';
+@import 'pages/browser-warning';
 
 /* Layout
    ========================================================================== */
