We don't need to have a warning message for old browsers now we've gone nuclear

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -5,7 +5,7 @@
 
 <!DOCTYPE html>
 
-<html class="js-off js-not-modern">
+<html class="js-off">
     <head>
         @if(!Config.membershipHide){
         <!--
