--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -5,7 +5,7 @@
 <header class="header" role="banner">
     <div class="js-warning">
         <!-- placeholder until real design and copy arrives -->
-        <p class="js-warning__js-off">Please enable JavaScript.</p>
+        <p>Please enable JavaScript.</p>
     </div>
     <div class="header__inner">
         <div class="u-cf">
