--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -65,9 +65,7 @@
 
         document.documentElement.className = document.documentElement.className.replace(/\bjs-off\b/g, '') + ' ' + htmlClassNames.join(' ');
 
-        if (isModern) {
-            document.documentElement.className = document.documentElement.className.replace(/\bjs-not-modern\b/g, '');
-        } else {
+        if (!isModern) {
             // we add this class so it's off by default (avoiding FOUC)
             document.documentElement.className += ' js-ancient-browser';
         }
