page container side margins markup

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -67,10 +67,12 @@
 
         @fragments.header()
 
-        <div class="page-container">
+        <div class="page-side-margins">
+            <div class="page-container">
 
-            @content
+                @content
 
+            </div>
         </div>
 
         @fragments.footer()
