--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -36,6 +36,15 @@ body {
     @include rem((
         max-width: 1100px
     ));
+
+    h2 {
+        @include fs-header(2);
+
+        @include mq(tablet) {
+            @include fs-header(3, true);
+        }
+    }
+
     @include mq(tablet) {
         @include rem((
             padding: 0 $gs-gutter*4 $gs-gutter*8
