page container side margins markup

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -67,11 +67,11 @@
 
         @fragments.unsupportedBrowser()
 
-        <div class="container-global">
-            @fragments.header()
-
+        <div class="page-side-margins">
             <div class="page-container">
+
                 @content
+
             </div>
         </div>
 
