--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -33,6 +33,7 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/headings';
+@import 'layout/side-margins';
 
 /* Content
    ========================================================================== */
