WIP started to work on markup
added image List of Tuples

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, isBrochure: Boolean = false)(content: Html)
 
 @import configuration.Config
 @import views.support.Asset
@@ -68,11 +68,15 @@
         @fragments.unsupportedBrowser()
 
         <div class="page-side-margins">
+        @if(isBrochure != true) {
             <div class="page-container">
+        }
 
                 @content
 
+        @if(isBrochure != true) {
             </div>
+        }
         </div>
 
         @fragments.footer()
