--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -2,12 +2,42 @@
 
 @import configuration.Config
 
-@main("Home Page") {
 
-        <h1 class="section-header">@if(Config.membershipHide){Masterclasses}else{Membership}</h1>
-        <ul class="u-unstyled">
-            @if(!Config.membershipHide){<li><a href="/join" class="action action--join">Become a member<i class="icon-sprite icon-sprite-arrow-right-white"></i></a></li>}
-            <li><a href="/events" class="action action--join">Events<i class="icon-sprite icon-sprite-arrow-right-white"></i></a></li>
-        </ul>
+@promoWithImageBackground(title: String, images: List[(String, String)])(content: Html) = {
+    <div class="brochure-container-outer brochure-container--image-background">
+        <div class="brochure-container">
+            <div class="brochure-container__inner">
+                <h2 class="section-headline section-headline--border-bottom">@title</h2>
 
+                @for((src, alt) <- images) {
+                    <img src="@src" alt="@alt"/>
+                }
+
+                @content
+            </div>
+        </div>
+    </div>
+}
+
+@main("Home Page", true) {
+
+    <div class="brochure-container">
+        <div class="brochure-container__inner">
+            <h2 class="section-headline section-headline--border-bottom">Introducing Guardian @if(Config.membershipHide){Masterclasses}else{Membership}</h2>
+            <p>We believe the <strong>open exchange</strong> of information, ideas and opinions has the power to <strong>change the world</strong></p>
+        </div>
+    </div>
+
+    <div class="brochure-container-outer brochure-container--white-background">
+        <div class="brochure-container">
+            <div class="brochure-container__inner">
+                <h2 class="section-headline section-headline--border-bottom">Introducing Guardian @if(Config.membershipHide){Masterclasses}else{Membership}</h2>
+                <p>We believe the <strong>open exchange</strong> of information, ideas and opinions has the power to <strong>change the world</strong></p>
+            </div>
+        </div>
+    </div>
+
+    @promoWithImageBackground("Events that bring the Guardian to life", List("imageSrc" -> "altText", "imageSrc1" -> "altText1")) {
+        <p>We believe the <strong>open exchange</strong> of information, ideas and opinions has the power to <strong>change the world</strong></p>
+    }
 }
