slight tweak to layout

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -33,8 +33,8 @@
     <div class="brochure-container-outer brochure-container--white-background">
         <div class="brochure-container">
             <div class="brochure-container__inner l-row l-row--items-2">
-                <div class="brochure-container__image l-row"></div>
-                <div class="brochure-container__teaser l-row">
+                <div class="brochure-container__image l-row__item"><img src="image-path-here" alt="" class="brochure-container__image--holder"/></div>
+                <div class="brochure-container__teaser l-row__item l-row__item--boost-1">
                     <p>Guardian Membership brings you closer to the <strong>stories</strong> of the day, connects you to the <strong>conversations</strong> that matter and introduces you to <strong>fellow members</strong> who share your interests.</p>
                     <p><a class="action action--join" href="#">Join today</a></p>
                 </div>
