Remove final references to paymentDetails

--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -1,4 +1,4 @@
-@(paymentDetails: model.Stripe.Card, currentSubscription: model.Zuora.SubscriptionDetails, futureSubscription: model.Zuora.SubscriptionDetails)
+@(currentSubscription: model.Zuora.SubscriptionDetails, futureSubscription: model.Zuora.SubscriptionDetails)
 
 @import configuration.Config
 @import views.support.Dates._
