--- a/frontend/assets/stylesheets/layout/_side-margins.scss
+++ b/frontend/assets/stylesheets/layout/_side-margins.scss
@@ -1,3 +1,4 @@
+//calculates position of where to place side margins
 @mixin side-margins-position($container-width) {
     &:before,
     &:after {
