--- a/frontend/assets/stylesheets/layout/_headings.scss
+++ b/frontend/assets/stylesheets/layout/_headings.scss
@@ -10,13 +10,17 @@
 
     border-top: 20px solid $mem-blue;
     display: inline-block;
-    padding-top: $gs-baseline/3;
-    margin-bottom: $gs-baseline*4;
+    @include rem((
+        padding-top: $gs-baseline/3,
+        margin-bottom: $gs-baseline*4
+    ));
 }
 
 .section-headline--border-bottom {
-    padding-bottom: $gs-baseline*4;
     border-bottom: 1px solid $black;
+    @include rem((
+        padding-bottom: $gs-baseline*4
+    ));
 }
 
 .section-sub-headline {
