fix header after wierd rebase

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -67,6 +67,8 @@
 
         @fragments.unsupportedBrowser()
 
+        @fragments.header()
+
         <div class="page-side-margins">
         @if(isBrochure != true) {
             <div class="page-container">
