Use ScheduledTask in MemberRepository

--- a/frontend/app/views/fragments/debug.scala.html
+++ b/frontend/app/views/fragments/debug.scala.html
@@ -22,7 +22,7 @@
     }
 
     #salesforce:hover::before {
-        content: "@MemberRepository.authenticationAgent.get()";
+        content: "@MemberRepository.agent.get()";
     }
 
     #zuora:hover::before {
