--- a/frontend/app/views/fragments/debug.scala.html
+++ b/frontend/app/views/fragments/debug.scala.html
@@ -26,7 +26,7 @@
     }
 
     #zuora:hover::before {
-        content: "@SubscriptionService.authenticationAgent.get()";
+        content: "@SubscriptionService.agent.get()";
     }
 </style>
 <div class="debug-panel">
