--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -135,6 +135,16 @@ body {
     @include mq(desktop) {
         width: gs-span(12);
     }
+
+    p {
+        @include rem((
+            margin-bottom: $gs-gutter
+        ));
+    }
+
+    img {
+        background-color: transparent;
+    }
 }
 
 .brochure-container--promo-one {
@@ -148,12 +158,33 @@ body {
         @include mq(desktop) {
             width: gs-span(8);
         }
+
+        .section-headline--border-bottom {
+            @include rem((
+                margin-bottom: $gs-gutter
+            ));
+        }
     } 
 }
 
 .brochure-container--promo-two {
     background-color: rgba(180, 24, 0, .95);
     color: $black;
+    @include rem((
+        padding: 0 $gs-column-width * 3 0 $gs-column-width + $gs-gutter,
+        margin-bottom: $gs-gutter * 2
+    ));
+
+    .brochure-container__inner {
+        @include mq(desktop) {
+            width: gs-span(8);
+        }
+
+        .section-headline--black {
+            border-top: $gs-gutter solid $black;
+            color: $black;
+        }
+    } 
 }
 
 .brochure-container__inner {
