--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -72,6 +72,31 @@
     }
 }
 
+.action--secondary-button {
+    text-align: left;
+    background-color: $offWhite;
+    color: $black;
+    @include rem((
+        padding: 8px 8px 8px 18px,
+        width: 220px
+    ));
+    
+    &:visited,
+    &:active,
+    &:focus {
+        background-color: $offWhite;
+    }
+    &:hover {
+        background-color: darken($offWhite, 15%);
+    }
+    i {
+        float: right;
+        @include rem((
+            margin-top: 2px
+        ));   
+    }
+}
+
 .i-wait {
     display: none;
     img {
