--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -53,7 +53,7 @@
     <div class="brochure-container-outer brochure-container--white-background">
         <div class="brochure-container brochure-container--promo-three">
             <div class="brochure-container__inner">
-                <h2 class="section-headline section-headline--border-bottom">Membership fuels our jourmalism</h2>
+                <h2 class="section-headline section-headline--border-bottom">Membership fuels our journalism</h2>
                 <blockquote>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
                 <p class="brochure-container__copy">Guardian Membership is the community for those who share this ideal.</p>
                 <a class="action action--join" href="/events">Start your journey as patron</a>
